--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.11.12", features = ["json"]}
 http = "0.2"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+ordered-float = "3.3.0"
