--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 ordered-float = "3.3.0"
 csv = "1.1"
+sha2 = "0.10"
+hmac = "0.12"
+hex-literal = "0.3"
